# velara

./: .gitignore  .pre-commit-config.yaml  BRAND.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  README.md  SCENARIOS.md  SECURITY.md  conftest.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  linters.yml  release.yml  stale.yml  wiki-sync.yml
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  FAQ.md  PERSONAS.md  README.md  SALES_PLAYBOOK.md  TRAINING.md
docs/diagrams/: README.md  dependency-graph.md  erd.md  module-map.md
docs/posts/: README.md
docs/scenarios/: README.md  admin.md
docs/screens/: README.md  responsive-matrix.md
docs/security/: audit-log.md  pentest-checklist.md  threat-model.md
velara/: __init__.py  boot.py  demo.py  desktop_utils.py  exceptions.py  gate.py  hooks.py  install.py  modules.txt  notifications.py  seed.py  tasks.py  uninstall.py
velara/api/: dashboard.py  front_desk.py  guest.py  permissions.py  reservation.py  response.py  room.py  user_management.py  visual.py
velara/caps/: __init__.py  capability.json  capability_bundle.json  gate.py  role_capability_map.json
velara/caps_integration/: __init__.py  gate.py
velara/desktop_icon/: events.json  front_desk.json  guest_services.json  housekeeping.json  loyalty.json  maintenance.json  night_audit.json  reports.json  reservations.json  revenue.json  velara.json  velara_events.json  velara_fnb.json  velara_front_desk.json  velara_guest_services.json  velara_housekeeping.json  velara_loyalty.json  velara_maintenance.json  velara_night_audit.json  velara_reports.json  velara_reservations.json  velara_revenue.json  velara_rooms.json  velara_setup.json  velara_spa.json
velara/events/: customer_events.py  employee_events.py  payment_events.py  pos_events.py  sales_invoice_events.py  stock_events.py
velara/help/: _meta.json
velara/overrides/: customer_dashboard.py
velara/services/: __init__.py  lease_service.py  maintenance_service.py  property_service.py  tenant_service.py
velara/setup/: demo.py  seed.py
velara/tests/: conftest.py  test_api.py  test_permissions.py
velara/translations/: ar.csv  fr.csv
velara/utils/: __init__.py  constants.py  formatters.py  validators.py
wiki/: API-Reference.md  Architecture.md  Deployment.md  DocTypes-Reference.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Translation-Guide.md
(+318 files in other folders)
