[project]
name = "velara"
version = "1.0.0"
description = "Hotel & Hospitality Management System - نظام إدارة الفنادق والضيافة"
authors = [{name = "Arkan Lab", email = "dev@arkan.tech"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["frappe", "erpnext", "hotel", "hospitality", "pms", "reservation", "arabic", "rtl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
]

[project.urls]
Homepage = "https://github.com/ArkanLab/velara"
Repository = "https://github.com/ArkanLab/velara"
Documentation = "https://github.com/ArkanLab/velara/tree/main/docs"
Issues = "https://github.com/ArkanLab/velara/issues"
Changelog = "https://github.com/ArkanLab/velara/blob/main/CHANGELOG.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
hrms = ">=16.0.0,<17.0.0"
frappe_visual = ">=0.1.0"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",   # assertRaises(Exception)
    "B018",   # useless expression
    "B023",   # function definition in loop
    "B904",   # raise without from
    "E101",   # mixed spaces and tabs
    "E402",   # module level import not at top
    "E501",   # line too long
    "E741",   # ambiguous variable name
    "F401",   # unused import
    "F403",   # star imports
    "F405",   # may be undefined from star import
    "F722",   # syntax error in forward annotation
    "W191",   # indentation contains tabs
    "UP030",  # implicit positional references
    "UP031",  # percent format
    "UP032",  # f-string vs format
    "RUF001", # ambiguous unicode
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["velara/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
]
